--- a/style.css
+++ b/style.css
@@ -2,10 +2,6 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  font-family: "Playfair Display", serif;
-  font-optical-sizing: auto;
-  font-weight: 300;
-  font-style: normal;
   color: white;
 }
 
@@ -16,17 +12,22 @@ body {
 /* Navbar Styling */
 
 .brand-title {
-  font-size: 28.8px;
-  margin: 24px 0 0 48px;
+  font-size: 25px;
+  margin: 0 0 0 30px;
   text-transform: uppercase;
   text-decoration: none;
-  letter-spacing: 3px;
+  letter-spacing: 2px;
+  font-family: "Roboto Slab", serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
 }
 
 .navbar {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  padding: 20px;
 }
 
 .navbar-links {
@@ -44,13 +45,15 @@ body {
 }
 
 .navbar-links li a {
-  position: relative;
   text-decoration: none;
-  margin: 24px 48px 8px 16px;
+  margin: 0 16px;
   display: block;
   text-transform: uppercase;
-  letter-spacing: 3px;
-  font-size: 17px;
+  letter-spacing: 2px;
+  font-family: "Roboto Slab", serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
 }
 
 .navbar-links li a::after {
@@ -87,19 +90,30 @@ body {
   background-color: white;
 }
 
+
 /* Main Content Styling */
 
 /* Hero Section Styling */
 
 .home-section {
-  margin: 352px 0 370px 0;
+  margin: 250px 0 0 0;
   font-size: 48px;
   text-align: center;
-  letter-spacing: 3px;
 }
 
 .name {
   color: #00ff00;
+  font-family: "Roboto Slab", serif;
+  font-optical-sizing: auto;
+  font-weight: 600;
+  font-style: normal;
+}
+
+.heading {
+  font-family: "Roboto Slab", serif;
+  font-optical-sizing: auto;
+  font-weight: 300;
+  font-style: normal;
 }
 
 /* About Section Styling */
@@ -108,6 +122,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  margin: 500px 0 0 0;
 }
 
 .image {
@@ -119,10 +134,13 @@ body {
 
 .text {
   text-align: start;
-  width: 60%;
-  line-height: 30px;
-  font-size: 25px;
-  letter-spacing: 3px;
+  width: 55%;
+  font-size: 23px;
+  font-family: "Roboto Slab", serif;
+  font-optical-sizing: auto;
+  font-weight: 300;
+  font-style: normal;
+  line-height: 35px;
 }
 
 .about_me-1 {
@@ -132,10 +150,10 @@ body {
 /* Skills Section Styling */
 
 .skill-image {
-  margin: 100px 0;
   display: flex;
   justify-content: center;
   align-items: center;
+  margin: 150px 0 0 0;
 }
 
 .html-img, .css-img, .js-img, .react-img {
@@ -147,7 +165,7 @@ body {
 /* Project Section Styling */
 
 .project-section {
-  margin: 0 0 100px 0;
+  margin: 300px 0 300px 0;
 }
 
 .project-container {
@@ -167,10 +185,12 @@ body {
 }
 
 .to-do_header {
-  line-height: 41px;
   font-size: 40px;
   margin: 0;
-  letter-spacing: 3px;
+  font-family: "Roboto Slab", serif;
+  font-optical-sizing: auto;
+  font-weight: 500;
+  font-style: normal;
 }
 
 .separator {
@@ -183,9 +203,12 @@ body {
 .about_to-do {
   margin: 25px 0 10px 0;
   font-size: 20px;
-  width: 75%;
+  width: 70%;
+  font-family: "Roboto Slab", serif;
+  font-optical-sizing: auto;
+  font-weight: 300;
+  font-style: normal;
   line-height: 30px;
-  letter-spacing: 3px;
 }
 
 .html-project, .css-project, .js-project {
@@ -213,13 +236,21 @@ body {
 .to-do_demo {
   text-decoration: none;
   display: inline-block;
-  font-size: 23px;
+  font-size: 20px;
+  font-family: "Roboto Slab", serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
 }
 
 .to-do_github {
   text-decoration: none;
   display: inline-block;
-  font-size: 23px;
+  font-size: 20px;
+  font-family: "Roboto Slab", serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
 }
 
 .to-do_demo:hover {
@@ -252,6 +283,10 @@ body {
   border-radius: 20px;
   font-size: 17px;
   color: #000000;
+  font-family: "Roboto Slab", serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
 }
 
 .contact-message {
@@ -263,6 +298,10 @@ body {
   text-align: left;
   font-size: 17px;
   color: #000000;
+  font-family: "Roboto Slab", serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
 }
 
 .contact_form-button {
@@ -273,6 +312,10 @@ body {
   border: none;
   border-radius: 20px;
   color: #000000;
+  font-family: "Roboto Slab", serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
 }
 
 .contact_form-button:hover {
@@ -323,10 +366,11 @@ body {
 }
 
 .footerNav ul li a {
-  margin: 0 15px 0 0;
+  text-align: center;
+  margin: 0 15px;
   text-decoration: none;
   font-size: 20px;
-  letter-spacing: 3px;
+  letter-spacing: 1px;
 }
 
 .footerNav a:hover {
