--- a/style.css
+++ b/style.css
@@ -13,25 +13,24 @@ body {
 
 .brand-title {
   font-size: 25px;
-  margin: 0 0 0 30px;
+  margin: 24px 0 0 20px;
   text-transform: uppercase;
   text-decoration: none;
-  letter-spacing: 2px;
   font-family: "Roboto Slab", serif;
   font-optical-sizing: auto;
   font-weight: 400;
-  font-style: normal;
+  font-style: normal; 
 }
 
 .navbar {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 20px;
 }
 
 .navbar-links {
   display: flex;
+  margin: 24px 20px 0 0;
 }
 
 .navbar-links ul {
@@ -45,15 +44,13 @@ body {
 }
 
 .navbar-links li a {
+  position: relative;
   text-decoration: none;
-  margin: 0 16px;
+  margin: 0 20px 0 0;
   display: block;
   text-transform: uppercase;
-  letter-spacing: 2px;
-  font-family: "Roboto Slab", serif;
-  font-optical-sizing: auto;
-  font-weight: 400;
-  font-style: normal;
+  letter-spacing: 1px;
+  font-size: 20px;
 }
 
 .navbar-links li a::after {
@@ -90,29 +87,30 @@ body {
   background-color: white;
 }
 
-
 /* Main Content Styling */
 
 /* Hero Section Styling */
 
 .home-section {
-  margin: 250px 0 0 0;
-  font-size: 48px;
+  margin: 300px 0 420px 0;
   text-align: center;
 }
 
 .name {
   color: #00ff00;
+  font-size: 80px;
   font-family: "Roboto Slab", serif;
   font-optical-sizing: auto;
-  font-weight: 600;
+  font-weight: 500;
   font-style: normal;
 }
 
 .heading {
+  color: white;
+  font-size: 70px;
   font-family: "Roboto Slab", serif;
   font-optical-sizing: auto;
-  font-weight: 300;
+  font-weight: 400;
   font-style: normal;
 }
 
@@ -122,38 +120,37 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  margin: 500px 0 0 0;
 }
 
 .image {
-  max-width: 18%;
+  max-width: 15%;
   height: auto;
   border-radius: 10%;
   margin: 0 35px 0 0;
+  border: solid lime 5px;
 }
 
 .text {
   text-align: start;
-  width: 55%;
-  font-size: 23px;
+  width: 60%;
+  font-size: 25px;
   font-family: "Roboto Slab", serif;
   font-optical-sizing: auto;
   font-weight: 300;
   font-style: normal;
-  line-height: 35px;
 }
 
 .about_me-1 {
-  margin: 0 0 10px 0;
+  margin: 0 0 15px 0;
 }
 
 /* Skills Section Styling */
 
 .skill-image {
+  margin: 300px 0;
   display: flex;
   justify-content: center;
   align-items: center;
-  margin: 150px 0 0 0;
 }
 
 .html-img, .css-img, .js-img, .react-img {
@@ -165,7 +162,7 @@ body {
 /* Project Section Styling */
 
 .project-section {
-  margin: 300px 0 300px 0;
+  margin: 0 0 300px 0;
 }
 
 .project-container {
@@ -185,11 +182,12 @@ body {
 }
 
 .to-do_header {
+  line-height: 41px;
   font-size: 40px;
   margin: 0;
   font-family: "Roboto Slab", serif;
   font-optical-sizing: auto;
-  font-weight: 500;
+  font-weight: 300;
   font-style: normal;
 }
 
@@ -203,27 +201,31 @@ body {
 .about_to-do {
   margin: 25px 0 10px 0;
   font-size: 20px;
-  width: 70%;
+  width: 75%;
+  line-height: 30px;
   font-family: "Roboto Slab", serif;
   font-optical-sizing: auto;
-  font-weight: 300;
+  font-weight: 200;
   font-style: normal;
-  line-height: 30px;
 }
 
 .html-project, .css-project, .js-project {
   width: 6%;
-  margin: 10px 0 0 0;
+  margin: 5px 0 0 0;
 }
 
-.project-links {
+.todo-project-links {
   display: flex;
   flex-direction: column;
   margin: 20px 0 0 10px;
-  letter-spacing: 3px;
+  font-family: "Roboto Slab", serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 25px;
 }
 
-.project-links a {
+.todo-project-links a {
   text-decoration: none;
   color: inherit;
   margin: 0 0 20px 0;
@@ -231,26 +233,6 @@ body {
 
 .project-links a:hover {
   color: #00FF00;
-}
-
-.to-do_demo {
-  text-decoration: none;
-  display: inline-block;
-  font-size: 20px;
-  font-family: "Roboto Slab", serif;
-  font-optical-sizing: auto;
-  font-weight: 400;
-  font-style: normal;
-}
-
-.to-do_github {
-  text-decoration: none;
-  display: inline-block;
-  font-size: 20px;
-  font-family: "Roboto Slab", serif;
-  font-optical-sizing: auto;
-  font-weight: 400;
-  font-style: normal;
 }
 
 .to-do_demo:hover {
@@ -280,8 +262,8 @@ body {
   height: 40px;
   padding-left: 8px;
   border: none;
-  border-radius: 20px;
-  font-size: 17px;
+  border-radius: 10px;
+  font-size: 16px;
   color: #000000;
   font-family: "Roboto Slab", serif;
   font-optical-sizing: auto;
@@ -293,10 +275,10 @@ body {
   resize: none;
   height: 200px;
   width: 500px;
-  border-radius: 20px;
+  border-radius: 10px;
   padding: 8px;
   text-align: left;
-  font-size: 17px;
+  font-size: 16px;
   color: #000000;
   font-family: "Roboto Slab", serif;
   font-optical-sizing: auto;
@@ -307,14 +289,14 @@ body {
 .contact_form-button {
   width: 500px;
   height: 35px;
-  font-size: 18px;
+  font-size: 16px;
   background-color: #00FF00;
   border: none;
-  border-radius: 20px;
+  border-radius: 10px;
   color: #000000;
   font-family: "Roboto Slab", serif;
   font-optical-sizing: auto;
-  font-weight: 400;
+  font-weight: 500;
   font-style: normal;
 }
 
@@ -356,21 +338,24 @@ body {
 }
 
 .footerNav {
-  margin: 15px 0 15px 0;
+  margin: 15px 0 5px 0;
 }
 
 .footerNav ul {
   display: flex;
   justify-content: center;
   list-style-type: none;
+  font-family: "Roboto Slab", serif;
+  font-optical-sizing: auto;
+  font-weight: 300;
+  font-style: normal;
 }
 
 .footerNav ul li a {
-  text-align: center;
-  margin: 0 15px;
+  margin: 0 15px 0 0;
   text-decoration: none;
-  font-size: 20px;
-  letter-spacing: 1px;
+  font-size: 18px;
+  letter-spacing: 3px;
 }
 
 .footerNav a:hover {
