--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body {
 
 .brand-title {
   font-size: 1.5625rem;
-  margin: 1.5rem 0 0 1.25rem;
+  margin: 24px 0 0 20px;
   text-transform: uppercase;
   text-decoration: none;
   font-family: "Roboto Slab", serif;
@@ -30,7 +30,7 @@ body {
 
 .navbar-links {
   display: flex;
-  margin: 1.5rem 1.25rem 0 0;
+  margin: 24px 20px 0 0;
 }
 
 .navbar-links ul {
@@ -46,7 +46,7 @@ body {
 .navbar-links li a {
   position: relative;
   text-decoration: none;
-  margin: 0 1.25rem 0 0;
+  margin: 0 20px 0 0;
   display: block;
   text-transform: uppercase;
   letter-spacing: 1px;
@@ -57,9 +57,9 @@ body {
   content: '';
   position: absolute;
   left: 0;
-  bottom: -0.3125rem;
+  bottom: -5px;
   width: 100%;
-  height: 0.28125rem;
+  height: 4.5px;
   background-color: #00FF00;
   transform: scaleX(0);
   transform-origin: left;
@@ -72,13 +72,13 @@ body {
 
 .toggle-button {
   position: absolute;
-  top: 0.75rem;
-  right: 1rem;
+  top: 12px;
+  right: 16px;
   display: none;
   flex-direction: column;
   justify-content: space-between;
-  width: 1.875rem;
-  height: 1.3125rem;
+  width: 30px;
+  height: 21px;
 }
 
 .toggle-button .bar {
@@ -92,7 +92,7 @@ body {
 /* Hero Section Styling */
 
 .home-section {
-  margin: 18.75rem 0 26.25rem 0;
+  margin: 300px 0 420px 0;
   text-align: center;
 }
 
@@ -127,7 +127,7 @@ body {
   max-width: 15%;
   height: auto;
   border-radius: 10%;
-  margin: 0 2.1875rem 0 0;
+  margin: 0 35px 0 0;
   border: solid lime 5px;
 }
 
@@ -142,13 +142,13 @@ body {
 }
 
 .about_me-1 {
-  margin: 0 0 0.9375rem 0;
+  margin: 0 0 15px 0;
 }
 
 /* Skills Section Styling */
 
 .skill-image {
-  margin: 18.75rem 0;
+  margin: 300px 0;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -157,13 +157,13 @@ body {
 .html-img, .css-img, .js-img, .react-img {
   width: 8%;
   height: auto;
-  margin: 0 0.625rem;
+  margin: 0 10px;
 }
 
 /* Project Section Styling */
 
 .project-section {
-  margin: 0 0 18.75rem 0;
+  margin: 0 0 300px 0;
 }
 
 .project-container {
@@ -174,7 +174,7 @@ body {
 
 .project_img {
   max-width: 20%;
-  margin: 0 1.875rem 0 15.625rem;
+  margin: 0 30px 0 250px;
 }
 
 .project-details {
@@ -183,7 +183,7 @@ body {
 }
 
 .to-do_header {
-  line-height: 2.5625rem;
+  line-height: 41px;
   font-size: 2.5rem;
   margin: 0;
   font-family: "Roboto Slab", serif;
@@ -196,14 +196,14 @@ body {
   width: 10%;
   border: none;
   border-top: 1px solid #FFFFFF;
-  margin: 0.3125rem 0 0 0;
+  margin: 5px 0 0 0;
 }
 
 .about_to-do {
-  margin: 1.5625rem 0 0.625rem 0;
+  margin: 25px 0 10px 0;
   font-size: 1.25rem;
   width: 75%;
-  line-height: 1.875rem;
+  line-height: 30px;
   font-family: "Roboto Slab", serif;
   font-optical-sizing: auto;
   font-weight: 200;
@@ -212,13 +212,13 @@ body {
 
 .html-project, .css-project, .js-project {
   width: 6%;
-  margin: 0.3125rem 0 0 0;
+  margin: 5px 0 0 0;
 }
 
 .todo-project-links {
   display: flex;
   flex-direction: column;
-  margin: 1.25rem 0 0 0.625rem;
+  margin: 20px 0 0 10px;
   font-family: "Roboto Slab", serif;
   font-optical-sizing: auto;
   font-weight: 400;
@@ -229,7 +229,7 @@ body {
 .todo-project-links a {
   text-decoration: none;
   color: inherit;
-  margin: 0 0 1.25rem 0;
+  margin: 0 0 20px 0;
 }
 
 .project-links a:hover {
@@ -255,15 +255,15 @@ body {
 .contact-form {
   display: flex;
   flex-direction: column;
-  gap: 1rem;
+  gap: 16px;
 }
 
 .contact-inputs {
-  width: 31.25rem;
-  height: 2.5rem;
-  padding-left: 0.5rem;
+  width: 500px;
+  height: 40px;
+  padding-left: 8px;
   border: none;
-  border-radius: 0.625rem;
+  border-radius: 10px;
   font-size: 1rem;
   color: #000000;
   font-family: "Roboto Slab", serif;
@@ -274,10 +274,10 @@ body {
 
 .contact-message {
   resize: none;
-  height: 12.5rem;
-  width: 31.25rem;
-  border-radius: 0.625rem;
-  padding: 0.5rem;
+  height: 200px;
+  width: 500px;
+  border-radius: 10px;
+  padding: 8px;
   text-align: left;
   font-size: 1rem;
   color: #000000;
@@ -288,12 +288,12 @@ body {
 }
 
 .contact_form-button {
-  width: 31.25rem;
-  height: 2.1875rem;
+  width: 500px;
+  height: 35px;
   font-size: 1rem;
   background-color: #00FF00;
   border: none;
-  border-radius: 0.625rem;
+  border-radius: 10px;
   color: #000000;
   font-family: "Roboto Slab", serif;
   font-optical-sizing: auto;
@@ -310,8 +310,8 @@ body {
 
 .footer-container {
   width: 100%;
-  padding: 0.625rem 0 1.875rem 0;
-  margin: 3.75rem 0 0 0;
+  padding: 10px 0 30px 0;
+  margin: 60px 0 0 0;
   background-color: #1f2525;
 }
 
@@ -322,15 +322,15 @@ body {
 
 .socialIcons a {
   text-decoration: none;
-  margin: 0.625rem 0.9375rem 0 0;
-  padding: 0.3125rem;
+  margin: 10px 15px 0 0;
+  padding: 5px;
 }
 
 .socialIcons a i {
-  font-size: 2.1875rem;
+  font-size: 35px;
   opacity: 0.9;
   background-color: #3b4747;
-  padding: 0.9375rem;
+  padding: 15px;
   border-radius: 50%;
 }
 
@@ -339,7 +339,7 @@ body {
 }
 
 .footerNav {
-  margin: 0.9375rem 0 0 0;
+  margin: 15px 0 0 0;
 }
 
 .footerNav ul {
@@ -353,7 +353,7 @@ body {
 }
 
 .footerNav ul li a {
-  margin: 0 1.25rem 0 0;
+  margin: 0 20px 0 0;
   text-decoration: none;
   font-size: 1.25rem;
 }
@@ -404,81 +404,52 @@ body {
   }
 
   .home-section {
-    margin: 200px 0 330px 0;
-    font-size: 20px;
+    margin: 200px 0 220px 0;
   }
 
-  .about-container {
-    flex-direction: column;
-    align-items: center;
+  .name {
+    font-size: 35px;
+  }
+
+  .heading {
+    font-size: 40px;
   }
 
   .image {
-    max-width: 35%;
-    margin: 0 0 20px 0;
+    max-width: 25%;
   }
 
   .text {
-    width: 75%;
-    text-align: center;
+    width: 70%;
     font-size: 20px;
-  }
-
-  .skill-image {
-    margin: 70px 0 150px 0;
-    flex-wrap: wrap;
-  }
-
-  .html-img, .css-img, .js-img, .react-img {
-    width: 20%;
-    margin: 3px;
   }
 
   .project-container {
     flex-direction: column;
-    align-items: center;
-    text-align: center;
   }
 
   .project_img {
-    max-width: 55%;
-    margin: 0 0 15px 0;
-  }
-
-  .separator {
-    align-items: center;
-    margin: 0 auto;
-    width: 40%;
+    max-width: 80%;
+    margin: 50px 0 50px 0;
   }
 
   .project-details {
-    width: 80%;
+    display: flex;
+    flex-direction: column;
     align-items: center;
+  }
+
+  .to-do_header {
     text-align: center;
   }
 
+  .separator {
+    width: 80%;
+  }
+
   .about_to-do {
-    margin: 25px 0 0 0;
-  }
-
-  .html-project, .css-project, .js-project {
-    width: 20%;
-    margin: 20px 0;
-  }
-
-  .project-links {
-    margin: 10px 0;
-    width: 100%;
-  }
-
-  .to-do_demo, .to-do_github {
-    margin: 0;
-    width: 100%;
-    font-size: 20px;
-  }
-
-  .socialIcons a i {
-    font-size: 25px;
+    text-align: center;
+    width: 90%;
   }
 
   .contact-container {
@@ -486,27 +457,18 @@ body {
   }
 
   .contact-form {
-    width: 80%;
+    align-items: center;
   }
 
-  .contact-inputs, .contact-message, .contact_form-button {
-    width: 100%;
+  .contact-inputs {
+    width: 90%;
   }
 
-  .footer-container {
-    text-align: center;
+  .contact-message {
+    width: 90%;
   }
 
-  .socialIcons {
-    margin-bottom: 20px;
-  }
-
-  .footerNav ul {
-    flex-wrap: wrap;
-    justify-content: center;
-  }
-
-  .footerNav ul li {
-    margin: 10px;
+  .contact_form-button {
+    width: 90%;
   }
 }
