--- a/style.css
+++ b/style.css
@@ -9,17 +9,11 @@ body {
   background-color: #121616;
 }
 
-/* Navbar Styling */
-
 .brand-title {
-  font-size: 1.56rem;
-  margin: 24px 0 0 20px;
+  font-size: 1.5rem;
+  margin: 20px 0 0 40px;
   text-transform: uppercase;
   text-decoration: none;
-  font-family: "Roboto Slab", serif;
-  font-optical-sizing: auto;
-  font-weight: 400;
-  font-style: normal; 
 }
 
 .navbar {
@@ -30,7 +24,7 @@ body {
 
 .navbar-links {
   display: flex;
-  margin: 24px 20px 0 0;
+  margin: 20px 40px 0 0;
 }
 
 .navbar-links ul {
@@ -41,17 +35,18 @@ body {
 
 .navbar-links li {
   list-style: none;
+  margin: 0 20px 0 0;
 }
 
 .navbar-links li a {
   position: relative;
   text-decoration: none;
-  margin: 0 20px 0 0;
   display: block;
-  text-transform: uppercase;
-  letter-spacing: 1px;
-  font-size: 1.25rem;
+  font-size: 1.5rem;
+  color: inherit;
+  margin: 0 0 0 45px;
 }
+
 
 .navbar-links li a::after {
   content: '';
@@ -72,13 +67,13 @@ body {
 
 .toggle-button {
   position: absolute;
-  top: 12px;
-  right: 16px;
+  top: 10px;
+  right: 20px;
   display: none;
   flex-direction: column;
   justify-content: space-between;
   width: 30px;
-  height: 21px;
+  height: 20px;
 }
 
 .toggle-button .bar {
@@ -87,142 +82,108 @@ body {
   background-color: white;
 }
 
-/* Main Content Styling */
-
-/* Hero Section Styling */
-
 .home-section {
-  margin: 300px 0 420px 0;
+  margin: 300px 0 600px 0;
   text-align: center;
 }
 
 .name {
   color: #00ff00;
-  font-size: 3.75rem;
-  font-family: "Roboto Slab", serif;
-  font-optical-sizing: auto;
-  font-weight: 500;
-  font-style: normal;
-  text-transform: uppercase;
+  font-size: 4rem;
 }
 
 .heading {
   color: white;
-  font-size: 4.375rem;
-  font-family: "Roboto Slab", serif;
-  font-optical-sizing: auto;
-  font-weight: 400;
-  font-style: normal;
+  font-size: 4rem;
 }
-
-/* About Section Styling */
 
 .about-container {
   display: flex;
   align-items: center;
   justify-content: center;
+  gap: 30px;
 }
 
 .image {
-  max-width: 15%;
   height: auto;
-  border-radius: 10%;
-  margin: 0 35px 0 0;
+  border-radius: 15%;
 }
 
 .about-me_container {
   text-align: start;
-  width: 65%;
+  width: 60%;
   font-size: 1.5rem;
-  font-family: "Roboto Slab", serif;
-  font-optical-sizing: auto;
-  font-weight: 300;
-  font-style: normal;
 }
-
-.about_me {
-  margin: 0 0 15px 0;
-}
-
-/* Skills Section Styling */
 
 .skill-container {
-  margin: 300px 0;
+  margin: 100px 0;
+  text-align: center;
+}
+
+.skills-group {
+  margin: 0 0 50px 0;
+}
+
+.skills-header {
+  margin: 0 0 10px 0;
+  font-size: 1.5rem;
+}
+
+.skills-icons {
   display: flex;
   justify-content: center;
-  align-items: center;
+  gap: 10px;
 }
 
-.html-img, .css-img, .js-img, .react-img {
-  width: 8%;
-  height: auto;
-  margin: 0 10px;
+.skill-icon {
+  width: 6%;
 }
-
-/* Project Section Styling */
 
 .project-section {
-  margin: 0 0 300px 0;
+  margin: 300px 0 550px 0;
 }
 
 .project-container {
   display: flex;
-  align-items: flex-start;
+  align-items: center;
   justify-content: center;
+  gap: 25px;
 }
 
 .project_img {
-  width: 20%;
-  margin: 0 30px 0 250px;
+  width: 18%;
 }
 
 .project-details {
   display: flex;
   flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  width: 50%;
 }
 
 .to-do_header {
-  line-height: 41px;
   font-size: 2.5rem;
-  margin: 0;
-  font-family: "Roboto Slab", serif;
-  font-optical-sizing: auto;
-  font-weight: 300;
-  font-style: normal;
-}
-
-.separator {
-  width: 15%;
-  border: none;
-  border-top: 1px solid #FFFFFF;
-  margin: 5px 0 0 0;
+  font-weight: 400;
 }
 
 .about_to-do {
-  margin: 25px 0 10px 0;
-  font-size: 1.25rem;
-  width: 65%;
-  line-height: 30px;
-  font-family: "Roboto Slab", serif;
-  font-optical-sizing: auto;
-  font-weight: 200;
-  font-style: normal;
+  margin: 0 0 0 0;
+  font-size: 1.4rem;
+  font-weight: 300;
 }
 
 .html-project, .css-project, .js-project {
-  width: 8%;
-  margin: 5px 0 0 0;
+  width: 15%;
+  margin: 8px 0 0 0;
 }
 
 .todo-project-links {
   display: flex;
   flex-direction: column;
-  margin: 20px 0 0 10px;
-  font-family: "Roboto Slab", serif;
-  font-optical-sizing: auto;
-  font-weight: 400;
-  font-style: normal;
-  font-size: 1.5625rem;
+  margin: 10px 0 0 0;
+  font-weight: 300;
+  font-size: 1.5rem;
 }
 
 .todo-project-links a {
@@ -231,19 +192,9 @@ body {
   margin: 0 0 20px 0;
 }
 
-.project-links a:hover {
+.todo-project-links a:hover{
   color: #00FF00;
 }
-
-.to-do_demo:hover {
-  color: #00FF00;
-}
-
-.to-do_github:hover {
-  color: #00FF00;
-}
-
-/* Contact Section Styling */
 
 .contact-container {
   display: flex;
@@ -265,10 +216,6 @@ body {
   border-radius: 10px;
   font-size: 1rem;
   color: #000000;
-  font-family: "Roboto Slab", serif;
-  font-optical-sizing: auto;
-  font-weight: 400;
-  font-style: normal;
 }
 
 .contact-message {
@@ -280,10 +227,6 @@ body {
   text-align: left;
   font-size: 1rem;
   color: #000000;
-  font-family: "Roboto Slab", serif;
-  font-optical-sizing: auto;
-  font-weight: 400;
-  font-style: normal;
 }
 
 .contact_form-button {
@@ -294,18 +237,12 @@ body {
   border: none;
   border-radius: 10px;
   color: #000000;
-  font-family: "Roboto Slab", serif;
-  font-optical-sizing: auto;
-  font-weight: 500;
-  font-style: normal;
 }
 
 .contact_form-button:hover {
   background-color: #03a503;
   border: none;
 }
-
-/* Footer Styling */
 
 .footer-container {
   width: 100%;
@@ -345,10 +282,6 @@ body {
   display: flex;
   justify-content: center;
   list-style-type: none;
-  font-family: "Roboto Slab", serif;
-  font-optical-sizing: auto;
-  font-weight: 300;
-  font-style: normal;
 }
 
 .footerNav ul li a {
@@ -361,13 +294,12 @@ body {
   color: #00FF00;
 }
 
-/* Mobile Styling */
-
-@media (width < 1000px) {
+@media (max-width: 767px) {
   .navbar {
     flex-direction: column;
     align-items: flex-start;
     background-color: #3b4747;
+    padding-bottom: 2px;
   }
 
   .toggle-button {
@@ -394,46 +326,42 @@ body {
   }
 
   .navbar-links li a {
-    margin: 16px 0;
+    margin: 15px 0;
   }
 
   .brand-title {
     font-size: 1.5rem;
-    margin: 10px 0 10px 10px;
+    margin: 5px 0 5px 20px;
   }
 
   .home-section {
     margin: 200px 0 220px 0;
   }
 
-  .name {
+  .name, .heading {
     font-size: 2rem;
-  }
-
-  .heading {
-    font-size: 3rem;
   }
 
   .about-container {
     flex-direction: column;
   }
-  
+
   .image {
-    max-width: 25%;
+    max-width: 30%;
   }
 
-  .about_me {
-    font-size: 1.3rem;
-    margin: 25px 0 0 0;
+  .about-me_container {
+    width: 70%;
   }
 
-  .skill-container {
+  .skills-icons {
     flex-direction: column;
-    margin: 100px 0 200px 0;
+    align-items: center;
+    gap: 15px;
   }
 
-  .html-img, .css-img, .js-img, .react-img {
-    width: 12%;
+  .skill-icon {
+    width: 20%;
   }
 
   .project-container {
@@ -441,33 +369,39 @@ body {
   }
 
   .project_img {
-    width: 30%;
-  }
-
-  .to-do_header {
-    text-align: center;
-  }
-
-  .separator {
-    width: 12%;
+    width: 50%;
   }
 
   .project-details {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    width: 100%;
+    padding: 0 10px;
   }
 
-  .html-project, .css-project, .js-project {
-    width: 15%;
-    margin: 10px 0 10px 0;
+  .to-do_header {
+    font-size: 1.75rem;
   }
 
   .about_to-do {
-    text-align: center;
+    width: 90%;
+    margin: 0;
+  }
+
+  .html-project, .css-project, .js-project {
+    width: 10%;
   }
 
   .contact-container {
     flex-direction: column;
+    align-items: center;
+  }
+
+  .contact-inputs, .contact-message, .contact_form-button {
+    width: 90%;
+    max-width: 500px;
+  }
+
+  .socialIcons a i {
+    padding: 12px;
+    font-size: 30px;
   }
 }
