--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
 
 body {
   background-color: #121616;
+  overflow-x: hidden;
 }
 
 .brand-title {
@@ -102,6 +103,8 @@ body {
   align-items: center;
   justify-content: center;
   gap: 20px;
+  background-color: #1f2525;
+  padding: 30px 0 30px 0;
 }
 
 .headshot {
@@ -127,7 +130,7 @@ body {
 }
 
 .skills-header {
-  margin: 0 0 10px 0;
+  margin: 20px 0 10px 0;
   font-size: 1.5rem;
 }
 
@@ -142,10 +145,12 @@ body {
 }
 
 .project-section {
-  margin: 300px 0 550px 0;
+  margin: 100px 0 100px 0;
   display: flex;
   align-items: center;
   justify-content: center;
+  background-color: #1f2525;
+  padding: 30px 0 30px 0;
 }
 
 .project-container {
