--- a/style.css
+++ b/style.css
@@ -419,7 +419,10 @@ body {
   }
 
   .socialIcons a i {
-    padding: 8px;
     font-size: 1.5rem;
+  }
+
+  .footerNav li a {
+    font-size: 1rem;
   }
 }
