--- a/style.css
+++ b/style.css
@@ -419,10 +419,10 @@ body {
   }
 
   .socialIcons a i {
-    font-size: 1.5rem;
+    font-size: 1.8rem;
   }
 
-  .footerNav li a {
+  .footerNav a {
     font-size: 1rem;
   }
 }
