--- a/style.css
+++ b/style.css
@@ -420,9 +420,10 @@ body {
 
   .socialIcons a i {
     font-size: 1.6rem;
+    padding: 1px;
   }
 
   .footerNav ul li a {
-    font-size: 1rem;
+    font-size: 1.3rem;
   }
 }
