--- a/style.css
+++ b/style.css
@@ -419,7 +419,11 @@ body {
   }
 
   .socialIcons a i {
-    padding: 12px;
-    font-size: 2rem;
+    font-size: 1.6rem;
+    padding: 8px;
+  }
+
+  .footerNav ul li a {
+    font-size: 1rem;
   }
 }
